edited tech stack

--- a/index.html
+++ b/index.html
@@ -4,23 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gauri Sharma</title>
-    <meta name="description" content="Buildify landing page template" />
-    <meta name="author" content="Your Company" />
+    <meta name="description" content="Gauri Sharma's personal portfolio website. Software developer, AI researcher, and student at Georgia Tech." />
+    <meta name="author" content="Gauri Sharma" />
 
-    <meta property="og:title" content="Gauri Sharma" />
-    <meta
-      property="og:description"
-      content="Buildify landing page template"
-    />
+    <meta property="og:title" content="Gauri Sharma | Portfolio" />
+    <meta property="og:description" content="Portfolio of Gauri Sharma: projects, research, and blog." />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://gauri-sharmaa.github.io/" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@your_handle" />
+    <meta name="twitter:site" content="@gaurisharma1686" />
   </head>
-
   <body>
     <div id="root"></div>
-    <div id="buildify-script-container"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
